5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4344/executions/1601_1802.log
== TEST (2019-04-01 00:49:41) 
-- CODE:
import math as m

inicial_HP = int(input("Pontos de vida inicial?"))
D1 = int(input("Qual o valor sorteado no primeiro dado?"))
D2 = int(input("Qual o valor sorteado no segundo dado?"))
dano = m.sqrt(5*D1)+(pi**(d2/3))

atual_HP = inicial_HP - dano
int(atual_HP)
print(atual_HP)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dano = m.sqrt(5*D1)+(pi**(d2/3))
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:50:23) 
-- CODE:
import math as m

inicial_HP = int(input("Pontos de vida inicial?"))
D1 = int(input("Qual o valor sorteado no primeiro dado?"))
D2 = int(input("Qual o valor sorteado no segundo dado?"))
dano = m.sqrt(5*D1)+(m.pi**(d2/3))

atual_HP = inicial_HP - dano
int(atual_HP)
print(atual_HP)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dano = m.sqrt(5*D1)+(m.pi**(d2/3))
NameError: name 'd2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:50:44) 
-- CODE:
import math as m

inicial_HP = int(input("Pontos de vida inicial?"))
D1 = int(input("Qual o valor sorteado no primeiro dado?"))
D2 = int(input("Qual o valor sorteado no segundo dado?"))
dano = m.sqrt(5*D1)+(m.pi**(D2/3))

atual_HP = inicial_HP - dano
int(atual_HP)
print(atual_HP)


-- OUTPUT:
187.89432762141087
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:51:13) 
-- CODE:
import math as m

inicial_HP = int(input("Pontos de vida inicial?"))
D1 = int(input("Qual o valor sorteado no primeiro dado?"))
D2 = int(input("Qual o valor sorteado no segundo dado?"))
dano = m.sqrt(5*D1)+(m.pi**(D2/3))

atual_HP = inicial_HP - dano
int(atual_HP)
print(atual_HP+1)


-- OUTPUT:
188.89432762141087
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:51:37) 
-- CODE:
import math as m

inicial_HP = int(input("Pontos de vida inicial?"))
D1 = int(input("Qual o valor sorteado no primeiro dado?"))
D2 = int(input("Qual o valor sorteado no segundo dado?"))
dano = m.sqrt(5*D1)+(m.pi**(D2/3))

atual_HP = inicial_HP - dano
print(int(atual_HP))


-- OUTPUT:
187
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:52:04) 
-- CODE:
import math as m

inicial_HP = int(input("Pontos de vida inicial?"))
D1 = int(input("Qual o valor sorteado no primeiro dado?"))
D2 = int(input("Qual o valor sorteado no segundo dado?"))
dano = m.sqrt(5*D1)+(m.pi**(D2/3))

atual_HP = inicial_HP - dano
print(int(atual_HP+1))


-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:53:22) 
-- CODE:
import math as m

inicial_HP = int(input("Pontos de vida inicial?"))
D1 = int(input("Qual o valor sorteado no primeiro dado?"))
D2 = int(input("Qual o valor sorteado no segundo dado?"))
dano = m.sqrt(5*D1)+(m.pi**(D2/3))

atual_HP = inicial_HP - dano
print(int(atual_HP+1))


-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 00:54:29) 
-- CODE:
import math as m

inicial_HP = int(input("Pontos de vida inicial?"))
D1 = int(input("Qual o valor sorteado no primeiro dado?"))
D2 = int(input("Qual o valor sorteado no segundo dado?"))
dano = m.sqrt(5*D1)+(m.pi**(D2/3))

atual_HP = inicial_HP - dano
print(int(atual_HP+1))


-- EXECUTION TIME:
0.167558
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
